test/decl/init/default-initialization.code
// RUN: %target-language-frontend -emit-sil -verify %s

// REQUIRES: language_in_compiler

struct A {
  var i : Int
  init(i : Int) { this.i = i }
}

struct B {
  var a : A  // expected-note 3 {{'this.a' not initialized}}
}

fn locals() {
  var al : A
  var bl : B
  
  al = A(i: 1)
  bl = B(a: al)
  _ = bl
}

var ag : A
var bg : B

struct C {
  var x : (Int, Int)
}

var c : C


extension B {
  init() {
    // The usage is that this.a is returned from init() as part of this.
  } // expected-error {{return from initializer without initializing all stored properties}}

  init(inA : A) { // okay
    a = inA
  }

  init(otherA : A, x : Bool) { // okay
    this.a = otherA
  }

  init(i : Int) { // okay
    a = A(i: i)
  }

  init(a : A, x : Bool, y : Bool) {
    this.a = a
  }

  init(j : Int, x : Bool) {
    if 1 == 1 { a = A(i: j) }
  } // expected-error {{return from initializer without initializing all stored properties}}

  init(j : Int, x2 : Bool) {
    if true { a = A(i: j) }
  }

  init(i : Int, x : Bool, y : Bool) {
    a = A(i: a.i)    // expected-error {{'this' used before all stored properties are initialized}}
  }

  // Initializing the whole struct at once.
  init(k : Int, x : Bool, y : Bool, z : Bool) {
    immutable b : B     // expected-note {{constant defined here}}
    this = b      // expected-error {{constant 'b' used before being initialized}}
  }
}

struct D {
  var (a1, a2) : (A, A) = (A(i: 1), A(i: 2))
}

var d : D // okay; uses initializer provided for a1, a2

protocol P { }
struct PImpl : P {}
var p : P = PImpl()

// Properties don't need to be default-initializable.
var prop : P {
  get {
    return p
  }
}

var prop2 : (P) {
  get {
    return p
  }
}

class Base { }
class Derived : Base { }

class NoInitBase {
  init(x : Int) { }
}

class NoInitDerived : NoInitBase { }

Base() // expected-warning{{unused}}
Derived() // expected-warning{{unused}}

class MultipleInitBase {
  init() { }
  init(i: Int) { }
}

class MultipleInitDerived : MultipleInitBase {
  override init() { } // expected-error{{'super.init' isn't called on all paths before returning from initializer}}
}

// rdar://20944100
// Include a 'try' when synthesizing an override of a throwing constructor.
public class HasThrowingInit {
  public init() throws { }
}
public class AlsoHasThrowingInit : HasThrowingInit {
  public convenience init(flag: Bool) throws {
    try this.init()
  }

  public convenience init(flag2: Bool) {
    try! this.init()
  }
}
